# gold-trading-platform

./: .env.example  .gitignore  README.md  analyze_backtest.py  start.ps1  start.sh  test.ps1  test.sh
backend/: cache_metrics.json  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py  routes_backtests.py  routes_bots.py  routes_market.py  routes_strategies.py
backend/app/core/backtesting/: engine.py
backend/app/core/broker/: base.py  oanda.py
backend/app/core/data/: __init__.py  base.py  oanda.py  twelve_data.py
backend/app/core/live_trading/: bot_runner.py  registry.py
backend/app/models/: backtest.py  bot.py  cache_metrics.py  candle.py  db_base.py  market_data.py  trade.py
backend/app/services/: strategy_service.py
backend/app/strategies/: base_strategy.py  example_ma_cross.py  golden_momentum.py  long_trend_dip.py
backend/tests/: conftest.py  test_api_bots.py  test_api_strategies.py  test_bot_runner.py  test_market_data_repository.py  test_strategy_service.py
frontend/: NOTIFICATIONS.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CandleChart.tsx  Layout.tsx  LoadingOverlay.tsx  StrategyEditor.tsx  Tooltip.tsx
frontend/src/contexts/: NotificationContext.tsx
frontend/src/pages/: BacktestCreatePage.tsx  BacktestDetailPage.tsx  BacktestsPage.tsx  BotCreatePage.tsx  BotDetailPage.tsx  BotsPage.tsx  MarketPage.tsx  MetricsPage.tsx  StrategiesPage.tsx  StrategyCreatePage.tsx  StrategyDetailPage.tsx
(+3 files in other folders)
